name:          lens-opengl
category:      lens-opengl
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett, Casey McCann
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/lens/lens-opengl/
bug-reports:   http://github.com/lens/lens-opengl/issues
copyright:     Copyright (C) 2013 Edward A. Kmett, Casey McCann
synopsis:      Lenses for OpenGL
description:   Lenses for OpenGL
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/ekmett/lens-opengl.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
    base   >= 4.4 && < 5,
    lens   >= 3.9 && < 4,
    OpenGL >= 2.8 && < 2.9
  exposed-modules:
    Graphics.Rendering.OpenGL.Lens

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded -fno-warn-orphans
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
